    otherwise initialize SELinux and load the policy. Patch from
    Petter Reinholdtsen.
  * Make quotes visible in example of the manual page of fstab-decode
  * Sulogin: enforce reconnection of stdin/stdout/stderr if a device
    was specified.
  * Sulogin: if zero is read at reading the passwd guess it's done.
  * Sulogin: respect byte order that is do not mix chars and ints

  [ Petter Reinholdtsen ]
  * Next release will be 2.89dsf.
  * Add #ifdef in bootlogd.c to avoid gcc warnings about unused
    variable on non-linux platforms.
  * Only set the VSWTC field for termios in init if it is available,
    to get the source building on FreeBSD.
  * Add some code to be able to detect programs even as user with
    kernel 3.0 and above

 -- Petter Reinholdtsen <pere@hungry.com>  Sun Apr 11 11:28:55 CEST 2010

sysvinit (2.88dsf) world; urgency=low

  [ Petter Reinholdtsen ]
  * Mention new home on Savannah in README.
  * Revert change from Fedora/RedHat where the now obsolete command
    INIT_CMD_CHANGECONS was introduced.  Based on feedback and patch
    from Bill Nottingham.
  * Adjust makefile to make sure the install directories are created
    before files are copied into them.
  * Simplify build rules, based on patch from Mike Frysinger and Gentoo.
  * Fix minor bug in optimizing of argument parsing.  Based on
    report from jakemus on freshmeat.
  * Add casts to get rid of compiler warning about signed/unsigned issues.
  * Change tty handling in init to make sure the UTF-8 flag is not cleared
    on boot.  Patch from Samuel Thibault.
  * Add Makefile in toplevel directory.
  * Print usage information when shutdown is used by non-root user.
    Patch from Mike Frysinger and Gentoo.
  * Sync shutdown manual page and usage information.  Patch from Mike
    Frysinger and Gentoo.
  * Fix race condition in utmp writing.  Patch from Gil Kloepfer via
    Mike Frysinger and Gentoo.
  * Rewrite findtty() in bootlogd to recursively search /dev/ for the